--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS SANDBOX</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div id="overlay">
       <div id="modal">
-        <h2>CONTACT DETAILS</h2>
-        <p>Jack Blair, 4 Colby Drive</p>
-        <button id="close-modal">CLOSE</button>
+        <h2>Contact Details</h2>
+        <p>Jack Blair, 56 Main St</p>
+        <button id="close-modal">Close</button>
       </div>
     </div>
 
-    <div id="reveal">
-      <h1>CLICK TO REVEAL JACK'S DETAILS</h1>
-      <button id="open-modal">OPEN</button>
-    </div>
+    <h1>Click to reveal Jack's details</h1>
+    <button id="open-modal">Contact Me</button>
+
     <script src="js/main.js"></script>
   </body>
 </html>
